chore: review and minor update

--- a/data/blog/data-modeling.mdx
+++ b/data/blog/data-modeling.mdx
@@ -58,4 +58,4 @@ Physical Table Structure Should Include:
 ## References
 
 - Lecture notes from Business Analytics course, Prof. Paolo Menna, University of Verona 2024-2025
-- [IBM. "Data modeling"](https://www.ibm.com/topics/data-modeling)
+- IBM. (n.d.). [What is data modeling?](https://www.ibm.com/topics/data-modeling)
