chore: minor update on bio

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,19 +1,20 @@
 ---
-name: Mai TIEU Khoi
+name: Mai Khoi TIEU
 avatar: /static/images/avatar.png
-occupation: ex-Data Analyst @ Fossil Group
+occupation: Research Intern @ SINTEF
 email: tieukhoimai@gmail.com
 linkedin: https://www.linkedin.com/in/tieukhoimai/
 github: https://github.com/tieukhoimai
 ---
 
-I am a Master's student in Data Science at the University of Verona (Univr) and am currently studying at the University of Oslo (UiO) as part of the Erasmus+ program for 2024.
+I am currently a second-year Master's student in Computer Science at the University of Verona, Italy. Through the Erasmus program, I spent a transformative semester at the University of Oslo. Since April 2025, I have been working as a research intern with the Trustworthy Green IoT Group at SINTEF Digital in Norway.
 
-With over 3 years of experience as a Data Analyst, I held a dual role at Fossil Group as an Analytics Project Manager and Data Analyst. Additionally, I specialize in designing intricate data flow mechanisms between connected devices and companion apps. Leveraging my expertise, I ensure seamless and efficient data transfer, providing valuable insights into user behavior, product performance, customer segmentation, and wellness data from wrist-based wearable devices.
+My journey into data science began with four years in analytics engineering in Vietnam. Recently, at Fossil Group, I served as Analytics Project Manager, leading cross-functional teams to architect lightweight data warehouses and design data modeling solutions for mobile and wearable devices. These experiences strengthened my expertise in data infrastructure, end-to-end analytics workflows, and agile collaboration, and revealed how data can drive meaningful change. Since 2023, my academic pursuits have focused on data-centric topics—databases, data mining, and data visualization—which fuel my passion for intelligent data systems and interactive data exploration, especially those leveraging semantic representations and knowledge graphs.
+
+Beyond my professional endeavors, I am deeply committed to knowledge sharing through various initiatives documented on this website. Since 2023, I have created and presented [educational content on data visualization](https://www.dtacracy.org/recap-talk-6-data-visualization-storytelling/) for Vietnamese university students and early-career professionals as part of the DATAcracy Program—a U.S. Department of State-funded initiative empowering the next generation of data scientists in Vietnam. In 2024, I developed a Vietnamese writing assistant powered by [retrieval-augmented generation](https://tieukhoimai.me/series/retrieval-augmented-generation-rag), exploring how LLM-based systems can provide natural, context-aware writing support for low-resource languages. This project reflects my broader mission to make intelligent technologies accessible across linguistic and cultural boundaries. Since early 2025, I have been contributing as a data scientist to the [MapMe Project](https://mapme.asia/), a community-driven initiative that integrates satellite time-series data, infrastructure maps, and census statistics to build geospatial tools for the Mekong Delta. Collaborating with environmental science and spatial data experts, I help develop knowledge-driven mapping solutions that support sustainable development and climate resilience in the region.
 
 <p align="left">
   <a href="https://skillicons.dev">
     <img src="https://skillicons.dev/icons?i=aws,gcp,docker,figma,firebase,github,html,js,mongodb,mysql,nextjs,py,r,vscode" />
   </a>
 </p>
-
