--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -9,9 +9,7 @@ github: https://github.com/tieukhoimai
 
 I am currently a second-year Master's student in Computer Science at the University of Verona, Italy. Through the Erasmus program, I spent a transformative semester at the University of Oslo. Since April 2025, I have been working as a research intern with the Trustworthy Green IoT Group at SINTEF Digital in Norway.
 
-My journey into data science began with four years in analytics engineering in Vietnam. Recently, at Fossil Group, I served as Analytics Project Manager, leading cross-functional teams to architect lightweight data warehouses and design data modeling solutions for mobile and wearable devices. These experiences strengthened my expertise in data infrastructure, end-to-end analytics workflows, and agile collaboration, and revealed how data can drive meaningful change. Since 2023, my academic pursuits have focused on data-centric topics—databases, data mining, and data visualization—which fuel my passion for intelligent data systems and interactive data exploration, especially those leveraging semantic representations and knowledge graphs.
-
-Beyond my professional endeavors, I am deeply committed to knowledge sharing through various initiatives documented on this website. Since 2023, I have created and presented [educational content on data visualization](https://www.dtacracy.org/recap-talk-6-data-visualization-storytelling/) for Vietnamese university students and early-career professionals as part of the DATAcracy Program—a U.S. Department of State-funded initiative empowering the next generation of data scientists in Vietnam. In 2024, I developed a Vietnamese writing assistant powered by [retrieval-augmented generation](https://tieukhoimai.me/series/retrieval-augmented-generation-rag), exploring how LLM-based systems can provide natural, context-aware writing support for low-resource languages. This project reflects my broader mission to make intelligent technologies accessible across linguistic and cultural boundaries. Since early 2025, I have been contributing as a data scientist to the [MapMe Project](https://mapme.asia/), a community-driven initiative that integrates satellite time-series data, infrastructure maps, and census statistics to build geospatial tools for the Mekong Delta. Collaborating with environmental science and spatial data experts, I help develop knowledge-driven mapping solutions that support sustainable development and climate resilience in the region.
+Beyond my professional work, I’m passionate about sharing knowledge through the initiatives featured here. Since 2023, I’ve presented [data visualization workshops](https://www.dtacracy.org/recap-talk-6-data-visualization-storytelling/) for Vietnamese students and early-career professionals through the U.S. State Department-funded DATAcracy Program, built a [Vietnamese writing assistant](https://tieukhoimai.me/series/retrieval-augmented-generation-rag) using retrieval-augmented generation to bring LLM-based tools to low-resource languages, and, since 2025, contributed as a data scientist to the [MapMe Project](https://mapme.asia/), a community-driven initiative where I help create geospatial tools supporting sustainable development and climate resilience in the Mekong Delta.
 
 <p align="left">
   <a href="https://skillicons.dev">
