style: format JSON tags for consistency and readability fix: correct summary text in "From Transformer to LLMs" article

--- a/data/blog/from-transformer-to-llm.mdx
+++ b/data/blog/from-transformer-to-llm.mdx
@@ -3,7 +3,7 @@ title: From Transformer to LLMs
 date: '2024-12-12'
 tags: ['LLMs', 'Language Models', 'Transformer', 'Fine-tuning', 'RAG']
 draft: false
-summary: 'This article explores the evolution from Transformers to Large Language Models (LLMs), detailing the mechanisms of self-attentiBut greedy decoding is **short-sighted** - Can get trapped in local minima (good "local" choice of token, but poor text at the end, with no way to backtrack)n and multi-head attention, the role of position embeddings, various types of transformer models, and the training and fine-tuning processes of LLMs.'
+summary: 'This article explores the evolution from Transformers to Large Language Models (LLMs), detailing the mechanisms of self-attention and multi-head attention, the role of position embeddings, various types of transformer models, and the training and fine-tuning processes of LLMs.'
 image: '/static/images/resource/from-transformer-to-llm/thumbnail-board-room-attention.png'
 series: 'LLMs'
 seriesOrder: 1
