fix: update author bio

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -7,12 +7,8 @@ linkedin: https://www.linkedin.com/in/tieukhoimai/
 github: https://github.com/tieukhoimai
 ---
 
-I am currently a second-year Master's student in Computer Science at the University of Verona, Italy. Through the Erasmus program, I spent a transformative semester at the University of Oslo. Since April 2025, I have been working as a research intern with the Trustworthy Green IoT Group at SINTEF Digital in Norway.
+I am currently a second-year Master's student in Data Science at the University of Verona, Italy. Through the Erasmus program, I spent a transformative semester at the University of Oslo. Since April 2025, I have been working as a research intern with the Trustworthy Green IoT Group at SINTEF Digital in Norway.
 
-Beyond my professional work, I’m passionate about sharing knowledge through the initiatives featured here. Since 2023, I’ve presented [data visualization workshops](https://www.dtacracy.org/recap-talk-6-data-visualization-storytelling/) for Vietnamese students and early-career professionals through the U.S. State Department-funded DATAcracy Program, built a [Vietnamese writing assistant](https://tieukhoimai.me/series/retrieval-augmented-generation-rag) using retrieval-augmented generation to bring LLM-based tools to low-resource languages, and, since 2025, contributed as a data scientist to the [MapMe Project](https://mapme.asia/), a community-driven initiative where I help create geospatial tools supporting sustainable development and climate resilience in the Mekong Delta.
+Previously, I spent four years in analytics engineering in Vietnam, most recently as Analytics Project Manager at Fossil Group. There, I led the creation of a lightweight data warehouse and modeling architecture for mobile and wearable devices, an experience that deepened my interest in knowledge-driven, interactive data exploration.
 
-<p align="left">
-  <a href="https://skillicons.dev">
-    <img src="https://skillicons.dev/icons?i=aws,gcp,docker,figma,firebase,github,html,js,mongodb,mysql,nextjs,py,r,vscode" />
-  </a>
-</p>
+Beyond my professional work, I’m committed to building and sharing knowledge with communities — and this website is where I share my projects, ideas, and resources. In 2023, I presented [a data visualization talk](https://www.dtacracy.org/recap-talk-6-data-visualization-storytelling/) through the DATAcracy Program. In 2024, I built a Vietnamese writing assistant powered by [retrieval-augmented generation (RAG)](https://tieukhoimai.me/series/retrieval-augmented-generation-rag) to support creative writing in Vietnamese. Since 2025, I’ve been contributing to the [MapMe Project](https://mapme.asia/), developing knowledge-driven maps that combine satellite data, infrastructure maps, and local knowledge to support sustainable development and climate resilience in the Mekong Delta.
