fix: correct apostrophe usage in author bio

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -11,4 +11,4 @@ I am currently a second-year Master's student in Data Science at the University 
 
 Previously, I spent four years in analytics engineering in Vietnam, most recently as Analytics Project Manager at Fossil Group. There, I led the creation of a lightweight data warehouse and modeling architecture for mobile and wearable devices, an experience that deepened my interest in knowledge-driven, interactive data exploration.
 
-Beyond my professional work, I’m committed to building and sharing knowledge with communities — and this website is where I share my projects, ideas, and resources. In 2023, I presented [a data visualization talk](https://www.dtacracy.org/recap-talk-6-data-visualization-storytelling/) through the DATAcracy Program. In 2024, I built a Vietnamese writing assistant powered by [retrieval-augmented generation (RAG)](https://tieukhoimai.me/series/retrieval-augmented-generation-rag) to support creative writing in Vietnamese. Since 2025, I’ve been contributing to the [MapMe Project](https://mapme.asia/), developing knowledge-driven maps that combine satellite data, infrastructure maps, and local knowledge to support sustainable development and climate resilience in the Mekong Delta.
+Beyond my professional work, I'm committed to building and sharing knowledge with communities — and this website is where I share my [projects](/series), [ideas](/blog), and [resources](/learning). In 2023, I presented [a data visualization talk](https://www.dtacracy.org/recap-talk-6-data-visualization-storytelling/) through the DATAcracy Program. In 2024, I built a Vietnamese writing assistant powered by [retrieval-augmented generation (RAG)](https://tieukhoimai.me/series/retrieval-augmented-generation-rag) to support creative writing in Vietnamese. Since 2025, I've been contributing to the [MapMe Project](https://mapme.asia/), developing knowledge-driven maps that combine satellite data, infrastructure maps, and local knowledge to support sustainable development and climate resilience in the Mekong Delta.
